--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,7 +2,11 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-html,
+html {
+  height: 100vh;
+  width: 100vw;
+}
+
 body {
   padding: 0;
   margin: 0;
