--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -63,7 +63,7 @@ audio::-webkit-media-controls-enclosure {
   border-radius: 0;
 }
 
-.model-viewer {
+model-viewer {
   height: 400px;
   width: 400px;
 }
